# oakd_models

./: LICENSE  README.md
oakd_description/: CMakeLists.txt  package.xml
oakd_description/launch/: description.launch
oakd_description/urdf/: oakd-lite.urdf.xacro  oakd-poe.urdf.xacro  oakd.urdf.xacro
oakd_gazebo/: CMakeLists.txt  package.xml
oakd_gazebo/launch/: oakd_empty_world.launch  oakd_spawn.launch
