<?xml version="1.0"?>
<package format="2">
    <name>oakd_gazebo</name>
    <version>0.2.2</version>
    <description>Gazebo simulation launch files for the Luxonix OAKD AI Camera </description>
    <maintainer email="espressobot@gmail.com">Steve Okay</maintainer>
    <license>BSD-3-Clause</license>
    <url type="website">https://familiarrobotics.com/jetdillo/oakd</url>
    <url type="repository">https://github.com/jetdillo/oakd</url>
    <url type="bugtracker">https://github.com/jetdillo/oakd/issues</url>
    <author email="espressobot@gmail.com">Steve Okay</author>
    <buildtool_depend>catkin</buildtool_depend>
    <exec_depend>oakd_description</exec_depend>
    <exec_depend>gazebo_ros</exec_depend>
    <exec_depend>gazebo_ros_control</exec_depend>
    <exec_depend>xacro</exec_depend>

    <export>
        <gazebo_ros gazebo_model_path="${prefix}/models"/>
    </export>
</package>
